Opened 16 years ago

Closed 14 years ago

#3548 closed bug (fixed)

Single Window Nav : opt+alt+down : broken

Reported by: mmadia Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by mmadia)

When comparing keyboard navigation between Single and Multiple window navigation, opt (winkey)+alt+down functions as expected in multiple window navigation, yet is functionless in single window mode.

hrev29476

Single window:

  • alt+up: navigate to parent
  • alt+down: navigate to selected folder
  • opt+alt+up: new window of parent
  • opt+alt+down: nada ,

Multi-window:

  • alt+up: new window of parent
  • alt+down: new window of selected folder
  • opt+alt+up: navigate to parent
  • opt+alt+down: navigate to selected folder

Change History (3)

comment:1 by mmadia, 15 years ago

Description: modified (diff)
Version: R1/pre-alpha1R1/Development

comment:2 by anevilyak, 14 years ago

Owner: changed from axeld to anevilyak
Status: newin-progress

comment:3 by anevilyak, 14 years ago

Resolution: fixed
Status: in-progressclosed

Shortcut added in hrev39551.

Note: See TracTickets for help on using tickets.